Bug: ensure horizontal card image does not stretch.
For https://gitlab.com/undrr/web-backlog/-/issues/1086

--- a/stories/Components/Cards/Card/card.scss
+++ b/stories/Components/Cards/Card/card.scss
@@ -71,9 +71,9 @@
   }
 
   &__image {
-    height: 100%;
     object-fit: cover;
     width: 100%;
+    align-self: center;
   }
 
   &__share {
